# PathTracer

./: README.md
code/: CMakeLists.txt  PathTracing.sln  readme.md
code/PathTracing/: AABB.h  BVH.h  CMakeLists.txt  Light.h  Material.h  Mesh.h  Model.h  Morton64.h  PathTracing.vcxproj  PathTracing.vcxproj.filters  Ray.h  Render.h  Scene.h  Texture.h  Triangle.h  main.cpp  svpng.h  tinyexr.cpp  tinyexr.h  utility.h  xmlLoader.h
code/PathTracing/x64/Debug/: Light.h.ifc.d.json  Light.h.ifc.dt.md.json.command  Light.h_AD7DF0F68F934CB0.ifc.dt.d.json  Light.h_AD7DF0F68F934CB0.ifc.dt.module.json  Light.h_AD7DF0F68F934CB0.ifc.dt.module.json.command  PathTracing.exe.recipe  light.h.module.json  vc142.idb  vc143.idb
code/PathTracing/x64/Debug/PathTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PathTracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/PathTracing/x64/Debug/PathTracing_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
code/PathTracing/x64/Release/: Light.h.ifc.d.json  Light.h.ifc.dt.md.json.command  Light.h_AD7DF0F68F934CB0.ifc.dt.module.json.command  PathTracing.exe.recipe  PathTracing.ipdb  light.h.module.json
code/PathTracing/x64/Release/PathTracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PathTracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/PathTracing/x64/Release/PathTracing_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
code/model/staircase/: staircase.mtl
exe/model/cornell-box/: cornell-box.mtl  cornell-box.xml
exe/model/veach-mis/: veach-mis.mtl
